# smufl-explorer

./: main.py
python/: main.py  requirements.txt
smufl_explorer/: Cargo.toml
smufl_explorer/src/: main.rs
smufl_explorer/ui/: appwindow.slint
