[package]
name = "smufl_explorer"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = "1.3.2"
arboard = "3.2"

[build-dependencies]
slint-build = "1.3.2"

[package.metadata.bundle]
name = "SMuFL Explorer"
identifier = "com.alessandro.smufl-explorer"
icon = ["icons/32x32.png", "icons/128x128.png", "icons/512x512.png"] # Opzionale
version = "0.1.0"
copyright = "Copyright © 2026"
category = "Developer Tool"
short_description = "Un esploratore di font SMuFL veloce e leggero."
